# Vocal-Sinth

./: .gitignore  CMakeLists.txt  README.md  Vocal_Sinth_en_US.ts
VS.Core/: CMakeLists.txt  PrefixMap.cpp  PrefixMap.h  main.cpp  musicMath.cpp  musicMath.h  project.cpp  project.h  variables.cpp  variables.h  voicebank.cpp  voicebank.h  wavtool.cpp  wavtool.h
VS.Core/Audio/: TempoList.cpp  TempoList.h  audio.cpp  audio.h
VS.Core/Format/: Oto.cpp  Oto.h  VSQx.cpp  VSQx.h  WAV.h  midi.cpp  midi.h  ust.cpp  ust.h  ustx.cpp  ustx.h  wave.cpp  wave.h
VS.Core/Render/: renderEngine.cpp  renderEngine.h  renderPhrase.cpp  renderPhrase.h  renderResult.cpp  renderResult.h  resampler.cpp  resampler.h
VS.Core/ui/: Indicator.cpp  Indicator.h  PRGraphicsScene.cpp  PRGraphicsScene.h  PRGraphicsView.cpp  PRGraphicsView.h  PRNotes.cpp  PRNotes.h  PRNotesGraphicsView.cpp  PRNotesGraphicsView.h  PRTimelineGraphicsView.cpp  PRTimelineGraphicsView.h  Track.h  VBSettingsWindow.cpp  VBSettingsWindow.h  VBSettingsWindow.ui  mainSettings.cpp  mainSettings.h  mainSettings.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  partBody.cpp  partBody.h  partHead.cpp  partHead.h  partsGraphicsScene.cpp  partsGraphicsScene.h  partsGraphicsView.cpp  partsGraphicsView.h  partsHeaderGraphicsView.cpp  partsHeaderGraphicsView.h  partsTimelineGraphicsView.cpp  partsTimelineGraphicsView.h  projectSettingsWindow.cpp  projectSettingsWindow.h  projectSettingsWindow.ui  settingsTabBar.cpp  settingsTabBar.h  syllableEdit.cpp  (+7 more)
VS.Plugin/: SyllableBasedPhonemizer.cpp  SyllableBasedPhonemizer.h
VS.Tests/: CMakeLists.txt  test_mainWindow.cpp  test_mainWindow.h
VS/assets/testPrjct/: EYE.vsqx  nazotoki.ustx  test.ust  testJP.ust  testJPshort.ust
VS/assets/testPrjct/Crimson and White Red Spider Lily Song/: Crimson and White Red Spider Lily Song.ustx  Len_part.ust  Rin_part.ust
VS/assets/testPrjct/Nemurihime/: Len_part.pkf  Main.pkf  Read me onegai.txt  ust Gumi.ust  ust Len.ust  ust Lenshort.ust
VS/assets/testPrjct/Nothing Left to Lose/: Nothing Left to Lose (base) - Cassandra.ust  Nothing Left to Lose (base) - Varian.ust  Nothing Left to Lose (base).vsqx  Nothing Left to Lose (talk) - Cassandra.ust  Nothing Left to Lose (talk) - Varian.ust  Nothing Left to Lose (tuned) - Cassandra.ust  Nothing Left to Lose (tuned) - Varian.ust  readme.txt
VS/assets/testPrjct/RIP=RELEASE/: 3 MAIN (CV).ust  RIP=RELEASE-autosave.ustx  RIP=RELEASE.pkf  RIP=RELEASE.ustx
VS/assets/testPrjct/Прекрасное далёко/: Прекрасное далёко.ust  Прекрасное далёко.ustx
libs/alut/: alut.exp  alut.lib
libs/fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
